--- a/faq.html
+++ b/faq.html
@@ -84,7 +84,7 @@
             <h2>時間割が更新されない</h2>
             <p>学校側の問題です。運営側としてはどうしようもありません。</p>
         </section>
-        <section>
+        <section id="timetable-error">
             <h2>時間割がエラーで表示されない</h2>
             <p>
                 時間割が見られないときは、以下の手順を踏んだ上、再読込してください。<br>
@@ -141,6 +141,8 @@
 
     <script type="module" src="./script/notice/notice.js" defer></script>
     <script src="./script/customAlert.js" type="module"></script>
+    <script type="module" src="./script/restriction.js"></script>
+    <script type="module" src="./script/notification.js"></script>
     <script src="./script/verification.js"></script>
 </body>
 
