--- a/math/2equation/index.html
+++ b/math/2equation/index.html
@@ -66,6 +66,8 @@
 
     <script type="module" src="../../script/notice/notice.js"></script>
     <script src="../../script/customAlert.js" type="module"></script>
+    <script type="module" src="../../script/restriction.js"></script>
+    <script type="module" src="../../script/notification.js"></script>
     <script src="../../script/verification.js"></script>
     <script>
         window.MathJax = {
