--- a/mypage/other/index.html
+++ b/mypage/other/index.html
@@ -86,7 +86,6 @@
             <div class="stats">
                 <p><i class="fa-solid fa-door-open" title="訪問回数"></i> <span id="visit-count">0</span></p>
                 <p><i class="fa-solid fa-pencil" title="投稿回数"></i> <span id="post-count">0</span></p>
-                <p>(2025年10月22日以降)</p>
             </div>
         </section>
 
@@ -233,6 +232,10 @@
     </script>
     <script type="module" src="../../script/notice/notice.js"></script>
     <script src="../../script/customAlert.js" type="module"></script>
+    <script type="module" src="../../script/restriction.js"></script>
+    <script type="module" src="../../script/notification.js"></script>
+    <script type="module" src="../../script/restriction.js"></script>
+    <script type="module" src="../../script/notification.js"></script>
     <script src="../../script/verification.js"></script>
     <script data-goatcounter="https://talus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
