--- a/caution/index.html
+++ b/caution/index.html
@@ -40,14 +40,21 @@
 </head>
 
 <body>
+    <header>
+        <h1>警告</h1>
+    </header>
     <main>
         <section>
-            <h2>警告</h2>
+            <h2>警告(大事なことなので2回言いました)</h2>
             <p>このサイトは水戸一高附属中生専用サイトです。</p>
             <p>外部の方は利用できません。</p>
             <p>もし附属中生なのにこの画面が表示された場合は、<a href="https://mail.google.com/mail/?view=cm&to=yamamoto.yuujirou@mito1-h.ibk.ed.jp&su=サイトに入れない" target="_blank" rel="noopener noreferrer">yamamoto.yuujirou@mito1-h.ibk.ed.jp</a>まで名前と一緒に連絡ください。</p>
         </section>
     </main>
+    <script src="../script/customAlert.js" type="module"></script>
+    <script type="module" src="../script/restriction.js"></script>
+    <script type="module" src="../script/notification.js"></script>
+    <script src="../script/verification.js"></script>
     <script data-goatcounter="https://talus.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </body>
