--- a/new-page.html
+++ b/new-page.html
@@ -60,6 +60,8 @@
 
 	<script type="module" src="../script/notice/notice.js"></script>
     <script src="../script/customAlert.js" type="module"></script>
+    <script type="module" src="../script/restriction.js"></script>
+    <script type="module" src="../script/notification.js"></script>
     
 	<script src="../script/verification.js"></script>
     <script data-goatcounter="https://talus.goatcounter.com/count"
